--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <style>
 body {
   background: white;
+  text-align: center;
 }
+
 #content {
+  margin: 0 auto;
   width: 960px;
   height: 960px;
 }
